Bug 101322 - FILESAVE: Subtitle not preserved in XLSX
Summary: FILESAVE: Subtitle not preserved in XLSX
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
3.3.4 release
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:6.4.0
Keywords: filter:xlsx
Depends on:
Blocks: OOXML-Chart
  Show dependency treegraph
 
Reported: 2016-08-05 09:48 UTC by Laurent Balland
Modified: 2019-08-21 08:15 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Example of charts with/without title/subtitle (26.53 KB, application/vnd.oasis.opendocument.spreadsheet)
2016-08-05 09:48 UTC, Laurent Balland
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Laurent Balland 2016-08-05 09:48:41 UTC
Created attachment 126608 [details]
Example of charts with/without title/subtitle

Description: When adding a sub-title to a chart, it is not saved in XLSX format, but it is saved in XLS format.

Steps to reproduce:
1. Create a chart and insert a subtitle, like in attached document
2. File > Save as, choose XLSX
3. File > Reload

Actual behavior:
Subtitles disappear

Expected behavior:
Subtitle should remain, at least like when exporting to XLS: subtitle is preserved only if there is a title, and has same format as title (because it is simply added to title with a '\n'; Excel do not have subtitle field).
Comment 1 Thomas Hackert 2016-08-05 10:51:27 UTC
Hello Laurent, *,
I can confirm this bug with

OS: Debian Testing AMD64
LO: Version: 4.3.7.2
Build-ID: 8a35821d8636a03b8bf4e15b48f59794652c68ba
(parallel installed, following the instructions from https://wiki.documentfoundation.org/Installing_in_parallel/Linux)

up to

LO Version: 5.2.0.4
Build-ID: 066b007f5ebcc236395c7d282ba488bca6720265
CPU-Threads: 4; BS-Version: Linux 4.5; UI-Render: Standard; 
Gebietsschema: de-DE (de_DE.UTF-8)

(I have no older version than 4.3.7.2 installed, where XLSX was possible to choose, sorry ... :( My also parallel installed

OOo: OpenOffice.org 3.2.0
OOO320m12 (Build:9483)

nor

AOO: Apache OpenOffice 4.1.2
AOO412m3(Build:9782)  -  Rev. 1709696
2015-10-21 09:51 - Linux x86_64

does not even know XLSX ... ;)
HTH
Thomas.
Comment 2 Laurent Balland 2016-09-25 17:27:49 UTC
When exporting to Excel, title and sub-title are merged here with a "\n":
http://opengrok.libreoffice.org/xref/core/sc/source/filter/excel/xechart.cxx#ConvertTitle
both export to XLS and XLSX use this function.

However, if I change "\n" with another string, it appears in XLS export but NOT in XLSX export. So during XLSX export, title writing in oox is done in another place. But where?
Comment 3 Markus Mohrhard 2016-10-07 22:27:32 UTC
The problem is that OOXML does not support subtitles.
Comment 4 Laurent Balland 2016-10-08 08:52:41 UTC
(In reply to Markus Mohrhard from comment #3)
> The problem is that OOXML does not support subtitles.

Hi Moggi,

Yes, but XLS does not support neither. When export to XLS, subtitle is concatenated to title (see comment 2).
When export to XLSX, same thing is done, but this concatenation is lost in exported file.
Comment 5 QA Administrators 2017-10-23 14:02:52 UTC Comment hidden (obsolete)
Comment 6 Laurent Balland 2017-10-27 14:25:34 UTC
I can confirm the bug with LibO 5.3.6.1, LibO 5.4.2.1 and Version: 6.0.0.0.alpha1+ (x64)
Build ID: 91987a559bf1fde4a8d1eadc81e5711a7670fe69
CPU threads: 2; OS: Windows 6.1; UI render: default; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2017-10-26_22:52:07
Locale: fr-FR (fr_FR); Calc: CL
Comment 7 QA Administrators 2018-10-28 03:58:10 UTC Comment hidden (obsolete)
Comment 8 Commit Notification 2019-08-21 08:11:09 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/96a29c12a9d8734c9d2a812f38fc6654b5df9c48%5E%21

tdf#101322 Chart OOXML Export: fix missing subtitle

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.