tdf#101322 Chart OOXML Export: fix missing subtitle

Concatenate subtitle and main title texts, if both exist, just like
at the XLS/DOC export, because OOXML does not support subtitles.
If we only have a subtitle, export the whole subtitle shape instead of
the title shape, keeping its properties.

Change-Id: If6a27c023fcce58f4549a0edad44027bb0348b93