oox/source/export/chartexport.cxx
@@ -874,13 +874,13 @@ void ChartExport::exportChart( const Reference< css::chart::XChartDocument >& xC
 
     // get Properties of ChartDocument
     bool bHasMainTitle = false;
+    bool bHasSubTitle = false;
     bool bHasLegend = false;
     Reference< beans::XPropertySet > xDocPropSet( xChartDoc, uno::UNO_QUERY );
     if( xDocPropSet.is())
     {
         try
         {
-            bool bHasSubTitle = false;
             Any aAny( xDocPropSet->getPropertyValue("HasMainTitle"));
             aAny >>= bHasMainTitle;
             aAny = xDocPropSet->getPropertyValue("HasSubTitle");
@@ -899,15 +899,27 @@ void ChartExport::exportChart( const Reference< css::chart::XChartDocument >& xC
     FSHelperPtr pFS = GetFS();
     pFS->startElement(FSNS(XML_c, XML_chart));
 
-    // title
-    if( bHasMainTitle )
+    // titles
+    if( bHasMainTitle || bHasSubTitle )
     {
-        Reference< drawing::XShape > xShape = xChartDoc->getTitle();
-        if( xShape.is() )
+        OUString aSubText;
+        Reference< drawing::XShape > xShape;
+        if( bHasSubTitle )
         {
-            exportTitle( xShape );
-            pFS->singleElement(FSNS(XML_c, XML_autoTitleDeleted), XML_val, "0");
+            xShape = xChartDoc->getSubTitle();
+            if( bHasMainTitle )
+            {
+                // if we have a title and a subtitle too, we need only the subtitle text
+                Reference< beans::XPropertySet > xPropSet(xShape, uno::UNO_QUERY);
+                if( xPropSet.is() )
+                    xPropSet->getPropertyValue("String") >>= aSubText;
+            }
         }
+        if( bHasMainTitle )
+            xShape = xChartDoc->getTitle();
+
+        exportTitle( xShape, !aSubText.isEmpty() ? &aSubText : nullptr );
+        pFS->singleElement(FSNS(XML_c, XML_autoTitleDeleted), XML_val, "0");
     }
     InitPlotArea( );
     if( mbIs3DChart )
@@ -1086,7 +1098,7 @@ void ChartExport::exportLegend( const Reference< css::chart::XChartDocument >& x
     pFS->endElement( FSNS( XML_c, XML_legend ) );
 }
 
-void ChartExport::exportTitle( const Reference< XShape >& xShape )
+void ChartExport::exportTitle( const Reference< XShape >& xShape, const OUString* pSubText)
 {
     OUString sText;
     Reference< beans::XPropertySet > xPropSet( xShape, uno::UNO_QUERY );
@@ -1094,6 +1106,11 @@ void ChartExport::exportTitle( const Reference< XShape >& xShape )
     {
         xPropSet->getPropertyValue("String") >>= sText;
     }
+
+    // tdf#101322: add subtitle to title
+    if( pSubText )
+        sText = sText.isEmpty() ? *pSubText : sText + "\n" + *pSubText;
+
     if( sText.isEmpty() )
         return;
 
